--- a/.github/workflows/orangefox.yml
+++ b/.github/workflows/orangefox.yml
@@ -1,44 +1,36 @@
-name: orangefox-Builder
+name: orange fox builder
 
 on:
   workflow_dispatch:
     inputs:
-      MANIFEST_TYPE:
-        description: 'MANIFEST_TYPE'
+      LIBRARY_NAME:
+        description: 'LIBRARY_NAME'
         required: true
         default: 'omni'
-      MANIFEST_URL:
-        description: 'MANIFEST_URL'
+      LIBRARY_URL:
+        description: 'LIBRARY_URL'
         required: true
         default: 'https://gitlab.com/OrangeFox/Manifest.git'
-      MANIFEST_BRANCH:
-        description: 'MANIFEST_BRANCH'
+      LIBRARY_BRANCH:
+        description: 'LIBRARY_BRANCH'
         required: true
         default: 'fox_9.0'
-      DEVICE_TREE_URL:
-        description: 'DEVICE_TREE_URL'
+      DEVICE_URL:
+        description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/SGCMarkus/android_device_lge_flashlmdd-twrp'
-      DEVICE_COMMON_URL:
-        description: 'DEVICE_COMMON_URL'
+        default: 'https://github.com/123qiu-jie/android_device_asus_ASUS_Z012D'
+      DEVICE_BRANCH:
+        description: 'DEVICE_BRANCH'
         required: true
-        default: 'https://github.com/SGCMarkus/android_device_lge_sm8150-common-twrp'
-      DEVICE_TREE_BRANCH:
-        description: 'DEVICE_TREE_BRANCH'
-        required: true
-        default: 'android-10'
+        default: 'master'
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/lge/flashlmdd'
-      DEVICE_COMMON_PATH:
-        description: 'DEVICE_COMMON_PATH'
-        required: true
-        default: 'device/lge/sm8150-common'
+        default: 'device/asus/ASUS_Z012D'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'flashlmdd'
+        default: 'ASUS_Z012D'
 
 jobs:
   build:
@@ -58,6 +50,7 @@ jobs:
         sudo apt -y autoclean
         sudo apt clean
         sudo apt update
+        sudo apt -y upgrade
         sudo apt -y install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev imagemagick libbz2-dev libssl-dev lzma ncftp bash-completion python openjdk-8-jdk qemu-user-static
       
     - name: Set variables
@@ -88,15 +81,15 @@ jobs:
         PATH=~/bin:$PATH
         cd workspace
         repo sync -j$(nproc --all) -f --force-sync
+        ls -al
       
-    - name: Clone device
+    - name: Clone device tree
       run: |
         PATH=~/bin:$PATH
         cd ${{ steps.pwd.outputs.pwd }}
         git clone ${{ github.event.inputs.DEVICE_TREE_URL }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.DEVICE_PATH }}
-        git clone ${{ github.event.inputs.DEVICE_COMMON_URL }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.DEVICE_COMMON_PATH }}
 
-    - name: Building
+    - name: Building recovery
       run: |
         PATH=~/bin:$PATH
         cd ${{ steps.pwd.outputs.pwd }}
@@ -104,15 +97,12 @@ jobs:
         source build/envsetup.sh
         lunch ${{ github.event.inputs.MANIFEST_TYPE }}_${{ github.event.inputs.DEVICE_NAME }}-eng 
         make clean
-        make recoveryimage -j$(nproc --all)
-
+        make recoveryimage -j$(nproc --all)        
+      
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
       with:
-        files: |
-          workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.zip
-          workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery.img
-          workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.cpio
+        files: workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery.img
         name: ${{ github.event.inputs.DEVICE_NAME }}-${{ github.run_id }}
         tag_name: ${{ github.run_id }}
         body: Recovery for ${{ github.event.inputs.DEVICE_NAME }}
