--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,8 @@ jobs:
 
       - name: fox sync
         run: |
-         git clone ${{env.FOX_SYNC}} ${{env.FOX_SYNC_PATH}}
+         cd ${{env.WorkSpace}}
+         git clone ${{env.FOX_SYNC}} 
          bash orangefox_sync.sh --branch $SYNC_BRANCH --path $SYNC_PATH
 
       - name: fox theme
