--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
          cd ${{env.WorkSpace}}
          git clone ${{env.FOX_SYNC}} 
          cd sync
-         bash orangefox_sync.sh --branch $SYNC_BRANCH --path $SYNC_PATH
+         bash orangefox_sync.sh --branch 12.1 --path ~/OrangeFox_12.1
 
       - name: fox theme
         run: |
