--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,20 +111,12 @@ jobs:
             
       - name: Build ${{env.RECOVERY_NAME}}
         run: |
-          cd ${{env.WorkSpace}}/sync
-          echo "::group::Run Envsetup.sh"
+          cd ${{env.WorkSpace}}/${{env.DEVICE_PATH}}
           source build/envsetup.sh
-          echo "::endgroup::"
-          echo "::group::Set EnvPath"
           export ALLOW_MISSING_DEPENDENCIES=true
           export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
           export LC_ALL="C"
-          echo "::endgroup::"
-          echo "::group::Lunch ${{env.ProductFileHeader}}_${{env.DEVICE}}-eng"
-          lunch ${{env.ProductFileHeader}}_${{env.DEVICE}}-eng
-          echo "::group::Build ${{env.RECOVERY_NAME}}"
-          mka ${{env.target}}
-          echo "::endgroup::"
+          lunch ${{env.ProductFileHeader}}_${{env.DEVICE}}-eng && mka adbd recoveryimage
         shell: bash
 
       - name: Get info
