--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Sync device tree
         run: |
-          cd cd ~/fox_12.1
+          cd ~/fox_12.1
           git clone ${{env.DT_LINK}} ${{env.DEVICE_PATH}}
 
       - name: Show tree
