--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           cd ~/OrangeFox_sync
           git clone https://github.com/skyhuppa/sync.git 
           cd ~/OrangeFox_sync/sync/
-          ./orangefox_sync.sh --branch 12.1 --path ~/fox_12.1
+          bash orangefox_sync.sh --branch 12.1 --path ~/fox_12.1
 
       - name: fox theme
         run: |
