--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
           export ALLOW_MISSING_DEPENDENCIES=true
           export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
           export LC_ALL="C"
-          lunch ${{env.ProductFileHeader}}_${{env.DEVICE}}-eng && mka adbd recoveryimage
+          lunch ${{env.ProductFileHeader}}_${{env.DEVICE}}-eng && mka adbd bootimage
         shell: bash
 
       - name: Get info
