--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,17 +96,17 @@ jobs:
         run: |
           git clone --depth=1 --single-branch https://github.com/skyhuppa/sync.git 
           cd sync
-          bash orangefox_sync.sh --branch 12.1 --path ~/fox_12.1
+          bash orangefox_sync.sh --branch 12.1 --path ~/work
 #          git https://github.com/skyhuppa/theme.git bootable/recovery/gui/theme
 
       - name: Sync device tree
         run: |
-          cd ~/fox_12.1
+          cd ~/work
           git clone --depth=1 --single-branch ${{env.DT_LINK}} ${{env.DEVICE_PATH}}
           
       - name: Build ${{env.RECOVERY_NAME}}
         run: |
-          cd ~/fox_12.1 
+          cd ~/work
           source build/envsetup.sh
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
