--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,19 +94,18 @@ jobs:
 
       - name: fox sync
         run: |
-          git clone --depth=1 --single-branch https://github.com/skyhuppa/sync.git 
-          cd sync
-          bash orangefox_sync.sh ---branch 12.1 --path /sync
+          git clone https://github.com/skyhuppa/sync.git 
+          bash orangefox_sync.sh ---branch 12.1 --path ~/fox_12.1
 #          git https://github.com/skyhuppa/theme.git bootable/recovery/gui/theme
 
       - name: Sync device tree
         run: |
-          cd sync
+          cd ~/fox_12.1
           git clone ${{env.DT_LINK}} ${{env.DEVICE_PATH}}
           
       - name: Build ${{env.RECOVERY_NAME}}
         run: |
-          cd sync  
+          cd ~/fox_12.1 
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
           ccache -M 50G
