--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
       - name: fox sync
         run: |
           git clone https://github.com/skyhuppa/sync.git 
-          cd ~/sync
+          cd sync
           bash orangefox_sync.sh ---branch 12.1 --path ~/fox_12.1
 #          git https://github.com/skyhuppa/theme.git bootable/recovery/gui/theme
 
