--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,7 @@ jobs:
         run: |
           git clone https://github.com/skyhuppa/sync.git 
           cd sync
-          bash orangefox_sync.sh ---branch 12.1 --path ~/fox_12.1
+          bash orangefox_sync.sh --branch 12.1 --path ~/fox_12.1
 #          git https://github.com/skyhuppa/theme.git bootable/recovery/gui/theme
 
       - name: Sync device tree
