--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
           cd ~/fox_12.1 
           export ${{env.SYNC_BRANCH}}
-          echo ${{env.SYNC_BRANCH}}
+          echo "${{env.SYNC_BRANCH}}"
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
           ccache -M 50G
