--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,6 +113,7 @@ jobs:
           export CCACHE_EXEC=/usr/bin/ccache
           ccache -M 50G
           source build/envsetup.sh
+          echo "vendorsetup.sh"
           export ALLOW_MISSING_DEPENDENCIES=true
           export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
           export LC_ALL="C"
