--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,16 +8,16 @@ on:
         default: "true"
         
 env:
-  RECOVERY_NAME: 'Orangefox'
-  ProductFileHeader: 'twrp'
-  DT_LINK: 'https://github.com/skyhuppa/Realme_8_RMX3085 -b fox_12.1'
-  DEVICE: 'RMX3085'
-  DEVICE_PATH: 'device/realme/RMX3085'
-  SYNC_BRANCH: 'fox_12.1'
-  FOX_SYNC: 'https://gitlab.com/OrangeFox/sync.git'
-  SYNC_PATH: 'sync'
-  FOX_THEME: 'https://github.com/skyhuppa/theme.git'
-  FOX_THEME_PATH: 'bootable/recovery/gui/theme'
+  RECOVERY_NAME: Orangefox
+  ProductFileHeader: twrp
+  DT_LINK: https://github.com/skyhuppa/Realme_8_RMX3085 -b fox_12.1
+  DEVICE: RMX3085
+  DEVICE_PATH: device/realme/RMX3085
+  SYNC_BRANCH: fox_12.1
+  FOX_SYNC: https://gitlab.com/OrangeFox/sync
+  SYNC_PATH: sync
+  FOX_THEME: https://github.com/skyhuppa/theme.git
+  FOX_THEME_PATH: bootable/recovery/gui/theme
   target: recoveryimage
   WorkSpace: WorkSpace
   TZ: Asia/Shanghai
